--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.5",
-    "react-redux": "^8.1.2"
+    "react-redux": "^8.1.2",
+    "webamp": "^1.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
